fixed a problem with the menu items overflowing into subsequent items

--- a/clientSide/components/menu/default.css
+++ b/clientSide/components/menu/default.css
@@ -3,7 +3,7 @@ body {
   margin: 0px;
   position: absolute;
   font-family: Verdana;
-  font-size: 15px;
+  /*font-size: 15px;*/
 }
 
 .break {
@@ -32,8 +32,11 @@ body {
 
 /* General Menu Button stuff */
 .menuButton {
-  background: #CCC;
+  padding: 1px;
+  /*background: #F80;*/
   cursor: default;
+  
+  border-radius: 5px;
   
   /* prevent users from selecting the text in the menu */
   -webkit-touch-callout: none;
@@ -85,10 +88,10 @@ body {
 \******************************************************************************/
 .subMenu .menuButton {
   width: 300px;
-  height: 20px;
+  overflow:hidden;
 }
 .subMenu .menuButton .name {
 }
 .subMenu .menuButton .image {width: 16px; height: 16px; margin: 2px;}
 .subMenu .menuButton .image img {width:100%; height: 100%;}
-.subMenu .menuButton .shortcutKey{float:right}
+.subMenu .menuButton .shortcutKey{float:right;}
